crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__build_section_without_package.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"foo\"\n        channels = []\n        platforms = []\n        preview = [\"pixi-build\"]\n\n        [build-system]\n        dependencies = [\"python-build-backend > 12\"]\n        build-backend = \"python-build-backend\"\n        channels = []\n        \"#,)"
---
  × Cannot use [build-system] without [package]
    ╭─[pixi.toml:8:9]
  7 │     
  8 │ ╭─▶         [build-system]
  9 │ │           dependencies = ["python-build-backend > 12"]
 10 │ │           build-backend = "python-build-backend"
 11 │ ╰─▶         channels = []
 12 │             
    ╰────
