crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__build_section_without_preview.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"foo\"\n        channels = []\n        platforms = []\n\n        [build-system]\n        build-backend = { name = \"foobar\", version = \"*\" }\n        \"#,)"
---
  × [build-system] section is only allowed when the `pixi-build` preview flag is enabled
   ╭─[pixi.toml:7:9]
 6 │
 7 │ ╭─▶         [build-system]
 8 │ ╰─▶         build-backend = { name = "foobar", version = "*" }
 9 │
   ╰────
  help: Run `pixi workspace preview add pixi-build` to enable the preview flag
