crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__missing_version.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"foo\"\n        channels = []\n        platforms = []\n        preview = [\"pixi-build\"]\n\n        [package]\n\n        [package.build]\n        backend = { name = \"foobar\", version = \"*\" }\n        \"#,)"
---
  × missing field 'version' in table
    ╭─[pixi.toml:8:9]
  7 │ 
  8 │         [package]
    ·         ──────────
  9 │ 
 10 │         [package.build]
    ╰────
