crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__multiple_backend_config.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        channels = []\n        platforms = []\n        preview = [\"pixi-build\"]\n\n        [package]\n        name = \"foobar\"\n        version = \"0.1.0\"\n\n        [build-system]\n        build-backend = { name = \"foobar\", version = \"*\" }\n\n        [build-backend.foobar]\n\n        [build-backend.foobar2]\n        \"#,)"
---
  × unexpected key
    ╭─[pixi.toml:16:24]
 15 │ 
 16 │         [build-backend.foobar2]
    ·                        ───────
 17 │         
    ╰────
