crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__package_without_build_section.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"foo\"\n        channels = []\n        platforms = []\n\n        [package]\n\n        [package.build]\n        backend = { name = \"foobar\", version = \"*\" }\n        \"#,)"
---
  × [package] section is only allowed when the `pixi-build` feature is enabled
   ╭─[pixi.toml:7:9]
 6 │
 7 │         [package]
   ·         ──────────
 8 │
 9 │         [package.build]
   ╰────
  help: Run `pixi workspace preview add pixi-build` to enable the preview feature
