crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__parse_dev_invalid_flags.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"test\"\n        channels = []\n        platforms = [\"linux-64\"]\n\n        [dev]\n        bad-pkg = { path = \".\", flags = [\"foo\"] }\n        \"#,)"
---
  × the `flags` field is not supported for the dev dependency 'bad-pkg'
  help: only `extras` is supported alongside the source location in the `dev` table
