crates/pixi_manifest/src/toml/snapshots/pixi_manifest__toml__manifest__test__parse_dev_invalid_multiple_sources.snap
---
source: crates/pixi_manifest/src/toml/manifest.rs
expression: "expect_parse_failure(r#\"\n        [workspace]\n        name = \"test\"\n        channels = []\n        platforms = [\"linux-64\"]\n\n        [dev]\n        bad-pkg = { path = \"../path\", git = \"https://github.com/example/repo.git\" }\n        \"#,)"
---
  × failed to parse dev dependency 'bad-pkg': only one of `url`, `path`, or `git` can be specified
